--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
+    "express-ejs-layouts": "^2.5.1",
     "express": "^5.1.0",
     "mssql": "^12.1.0",
     "nodemailer": "^7.0.10",
