Tilføj Cloudinary hero video integration
Integrerer Cloudinary video player i hero sektionen, inklusive environment variables, server side template variabler og frontend initialisering. Opdaterer både styles og markup, så videoen kan bruges som hero background sammen med en CTA knap. README er opdateret med instruktioner til opsætning af video konfiguration.

--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ DB_USER=danielmoellerberg
 DB_PASS=CBS!!DIS2025
 DB_ENCRYPT=true
 DB_TRUST_CERT=false
+
+#CLOUDINARY API
+CLOUDINARY_URL=cloudinary://197596746873474:eAXCHZSkn2M901LyMbsw1-dZkfo@dcgzil7pm
+CLOUDINARY_CLOUD_NAME=dcgzil7pm
+CLOUDINARY_VIDEO_PUBLIC_ID=Visit_Copenhagen_In_4K_-_Daniel_Lupascu_1080p_h264_qu32gn
