--- a/.env
+++ b/.env
@@ -14,4 +14,4 @@ DB_TRUST_CERT=false
 CLOUDINARY_URL=cloudinary://197596746873474:eAXCHZSkn2M901LyMbsw1-dZkfo@dcgzil7pm
 CLOUDINARY_CLOUD_NAME=dcgzil7pm
 CLOUDINARY_VIDEO_PUBLIC_ID=Visit_Copenhagen_In_4K_-_Daniel_Lupascu_1080p_h264_qu32gn
-CLOUDINARY_EMBED_URL=https://player.cloudinary.com/embed/?cloud_name=dcgzil7pm&public_id=Visit_Copenhagen_In_4K_-_Daniel_Lupascu_1080p_h264_qu32gn&profile=cld-default&autoplay=true&mute=true&loop=true
+CLOUDINARY_EMBED_URL=https://player.cloudinary.com/embed/?cloud_name=dcgzil7pm&public_id=Visit_Copenhagen_In_4K_-_Daniel_Lupascu_1080p_h264_qu32gn&profile=cld-default&autoplay=true&muted=true&mute=true&loop=true
