Rettet EMAIL_PASS så godkendelsen fungerer korrekt
Jeg har fjernet mellemrum i værdien for EMAIL_PASS, så formatet nu er korrekt og mailtjenesten kan godkende oplysningerne uden fejl.

--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ BASE_URL=https://projectdis.app
 
 #Email
    EMAIL_USER=projectdis.app@gmail.com
-   EMAIL_PASS=xddf rnzw wfit hyru
+   EMAIL_PASS=xddfrnzwwfithyru
    EMAIL_FROM=Understory Marketplace <projectdis.app@gmail.com>
 
 #Mailersend
