--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.2",
     "mailersend": "^2.6.0",
     "mssql": "^12.1.0",
     "stripe": "^20.0.0",
