Tilføjet crypto og JWT eksempler samt opdateret bruger og admin logik
Jeg har tilføjet crypto scripts og jwt scripts mapper med praktiske Node.js eksempler. Brugere og admins er blevet opdateret, så systemet nu understøtter password hashing, login og logout, nulstilling af adgangskode via sikre tokens og bedre sessionstyring. Gamle SQL scripts er fjernet, og afhængigheder er opdateret for at styrke sikkerhed og autentifikation.

--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
+  "name": "understory-marketplace",
+  "version": "1.0.0",
+  "description": "Understory Marketplace - CBS DIS Eksamen 2025",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "https": "node server-https.js",
+    "dev": "node server.js"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "mailersend": "^2.6.0",
+    "morgan": "^1.10.1",
     "mssql": "^12.1.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
+    "response-time": "^2.3.4",
     "stripe": "^20.0.0",
     "twilio": "^5.10.6"
   }
