--- a/.env
+++ b/.env
@@ -36,3 +36,5 @@ TWILIO_ACCOUNT_SID=AC385dfb20e479f1f7b4564081f48f6878
 TWILIO_AUTH_TOKEN=3e1ba4e344f9c1e2808236b9d3f10769
 TWILIO_PHONE_NUMBER=+18482665726
 
+#JWT SECRET
+SESSION_SECRET=understory-jwt-secret
