--- a/.env
+++ b/.env
@@ -38,3 +38,6 @@ TWILIO_PHONE_NUMBER=+18482665726
 
 #JWT SECRET
 SESSION_SECRET=understory-jwt-secret
+
+#Stripe
+STRIPE_WEBHOOK_SECRET=whsec_YlQoL9URhtEPwXB7xACL4nTLc0mkNqIl
